Fixing Path In Swagger Documentation
