# internal/handler/home.go
@@ -14,7 +14,7 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{string}	string	"Welcome to Todo app!"
-//	@Router			/home [get]
+//	@Router			/api/home [get]
 func Home(w http.ResponseWriter, r *http.Request) {
 	api.ParseResponse(w, "Welcome to Todo app!", http.StatusOK)
 }
