# internal/handler/todo.go
@@ -21,7 +21,7 @@ import (
 //	@Produce		json
 //	@Success		200	{array}		rq.Todo
 //	@Failure		400	{string}	string	"Bad Request"
-//	@Router			/todo [get]
+//	@Router			/api/todo [get]
 func GetTodos(w http.ResponseWriter, r *http.Request) {
 	todos, err := service.ReadTodoList()
 	if err != nil {
@@ -45,7 +45,7 @@ func GetTodos(w http.ResponseWriter, r *http.Request) {
 //	@Success		200		{string}	string	"Successfully created todo"
 //	@Failure		400		{string}	string	"Bad Request"
 //	@Failure		500		{string}	string	"Internal Server Error"
-//	@Router			/todo/user/{user_id} [post]
+//	@Router			/api/todo/user/{user_id} [post]
 func CreateTodo(w http.ResponseWriter, r *http.Request) {
 	var body rq.Todo
 	err := api.ParseRequest(r, &body)
@@ -91,7 +91,7 @@ func CreateTodo(w http.ResponseWriter, r *http.Request) {
 //	@Success		200		{string}	string			"Successfully updated todo"
 //	@Failure		400		{string}	string			"Bad Request"
 //	@Failure		500		{string}	string			"Internal Server Error"
-//	@Router			/todo/{todo_id} [put]
+//	@Router			/api/todo/{todo_id} [put]
 func UpdateTodo(w http.ResponseWriter, r *http.Request) {
 	var body rq.TodoUpdate
 	err := api.ParseRequest(r, &body)
@@ -136,7 +136,7 @@ func UpdateTodo(w http.ResponseWriter, r *http.Request) {
 //	@Success		200		{string}	string	"Successfully deleted todo"
 //	@Failure		400		{string}	string	"Bad Request"
 //	@Failure		500		{string}	string	"Internal Server Error"
-//	@Router			/todo/{todo_id} [delete]
+//	@Router			/api/todo/{todo_id} [delete]
 func DeleteTodo(w http.ResponseWriter, r *http.Request) {
 	id, err := api.ParseURLParameter(r, "todo_id")
 	if err != nil {
