# internal/handler/user.go
@@ -21,7 +21,7 @@ import (
 //	@Produce		json
 //	@Success		200	{array}		rq.User
 //	@Failure		400	{string}	string	"Bad Request"
-//	@Router			/user [get]
+//	@Router			/api/user [get]
 func GetUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := service.ReadUsers()
 	if err != nil {
@@ -44,7 +44,7 @@ func GetUsers(w http.ResponseWriter, r *http.Request) {
 //	@Success		200		{string}	string	"Successfully created user"
 //	@Failure		400		{string}	string	"Bad Request"
 //	@Failure		500		{string}	string	"Internal Server Error"
-//	@Router			/user [post]
+//	@Router			/api/user [post]
 func CreateUser(w http.ResponseWriter, r *http.Request) {
 	var body rq.User
 	err := api.ParseRequest(r, &body)
@@ -75,7 +75,7 @@ func CreateUser(w http.ResponseWriter, r *http.Request) {
 //	@Success		200		{string}	string	"Successfully deleted user"
 //	@Failure		400		{string}	string	"Bad Request"
 //	@Failure		500		{string}	string	"Internal Server Error"
-//	@Router			/user/{user_id} [delete]
+//	@Router			/api/user/{user_id} [delete]
 func DeleteUser(w http.ResponseWriter, r *http.Request) {
 	id, err := api.ParseURLParameter(r, "user_id")
 	if err != nil {
